--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <div id="score"></div>
+    <div id="score">Score: 0</div>
     <canvas id="field"></canvas>
     <button onclick="startGame()" id="start">Start</button>
 </body>
