Game Over screen, Added InputQueue

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="script.js"></script>
 </head>
 <body>
+    <div id="game-over">
+        <label for="restart" id="game-over-title">Game Over!</label>
+        <button onclick="startGame()" id="restart">Restart</button>
+    </div>
     <div id="score">Score: 0</div>
     <canvas id="field"></canvas>
     <button onclick="startGame()" id="start">Start</button>
